[gd_scene load_steps=3 format=3 uid="uid://bsdhlcjtqfh1n"]

[ext_resource type="Script" path="res://Scripts/LootDistribution.gd" id="1_x6vl5"]
[ext_resource type="LabelSettings" uid="uid://78a6686hj3xv" path="res://Assets/LabelSettings/Default.tres" id="2_fh0gv"]

[node name="DropdownLoot" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -11.5
offset_right = 6.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x6vl5")

[node name="DropdownLootVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DropdownLootHBox" type="HBoxContainer" parent="DropdownLootVBox"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LootLabel" type="Label" parent="DropdownLootVBox/DropdownLootHBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Select Your Item: "
label_settings = ExtResource("2_fh0gv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LootList" type="ItemList" parent="DropdownLootVBox/DropdownLootHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ItemDescriptionLabel" type="Label" parent="DropdownLootVBox/DropdownLootHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Item Description"
label_settings = ExtResource("2_fh0gv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="DropdownLootVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"
